samples/_failures_safe/1761302231_3f7941_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa7bbbac.c: In function ‘main’:
./samples/SAFE/__tmp_aa7bbbac.c:168:5: error: expected declaration or statement at end of input
  168 |     return 0;
      |     ^~~~~~
